load("@zap-cpp//src/zap:cc_zap_library.bzl", "cc_zap_library")
load("@rules_cc//cc:cc_binary.bzl", "cc_binary")
load("@rules_cc//cc:cc_library.bzl", "cc_library")
load("@rules_cc//cc:cc_test.bzl", "cc_test")
load(":configure.bzl", "zap_configure")

zap_configure()

exports_files([
    "c++.zap",
])

cc_library(
    name = "zap",
    srcs = [
        "any.c++",
        "arena.c++",
        "blob.c++",
        "c++.zap.c++",
        "dynamic.c++",
        "layout.c++",
        "list.c++",
        "message.c++",
        "schema.c++",
        "schema.zap.c++",
        "schema-loader.c++",
        "serialize.c++",
        "serialize-packed.c++",
        "stream.zap.c++",
        "stringify.c++",
    ],
    hdrs = [
        "any.h",
        "arena.h",
        "blob.h",
        "c++.zap.h",
        "capability.h",
        "common.h",
        "dynamic.h",
        "endian.h",
        "generated-header-support.h",
        "layout.h",
        "list.h",
        "membrane.h",
        "message.h",
        "orphan.h",
        "pointer-helpers.h",
        "pretty-print.h",
        "raw-schema.h",
        "schema.zap.h",
        "schema.h",
        "schema-lite.h",
        "schema-loader.h",
        "schema-parser.h",
        "serialize.h",
        "serialize-async.h",
        "serialize-packed.h",
        "serialize-text.h",
        "stream.zap.h",
        # This is just to make it avaible if `KJ_STD_COMPAT` is defined.
        # This is an unfortunate hack, but if we would make `std-iterator.h`
        # its own `cc_library()` we would have a circular dependency between
        # `//src/zap` and `//src/zap/compat:std-iterator``.
        "//src/zap/compat:std-iterator.h",
    ],
    include_prefix = "zap",
    visibility = ["//visibility:public"],
    deps = [
        "//src/kj:kj-async",
    ],
)

cc_library(
    name = "zap-rpc",
    srcs = [
        "capability.c++",
        "dynamic-capability.c++",
        "membrane.c++",
        "persistent.zap.c++",
        "reconnect.c++",
        "rpc.c++",
        "rpc.zap.c++",
        "rpc-twoparty.c++",
        "rpc-twoparty.zap.c++",
        "serialize-async.c++",
    ],
    hdrs = [
        "persistent.zap.h",
        "reconnect.h",
        "rpc.zap.h",
        "rpc.h",
        "rpc-prelude.h",
        "rpc-twoparty.zap.h",
        "rpc-twoparty.h",
    ],
    include_prefix = "zap",
    visibility = ["//visibility:public"],
    deps = [
        ":zap",
    ],
)

cc_library(
    name = "zapc",
    srcs = [
        "compiler/compiler.c++",
        "compiler/error-reporter.c++",
        "compiler/generics.c++",
        "compiler/grammar.zap.c++",
        "compiler/lexer.c++",
        "compiler/lexer.zap.c++",
        "compiler/node-translator.c++",
        "compiler/parser.c++",
        "compiler/type-id.c++",
        "schema-parser.c++",
        "serialize-text.c++",
    ],
    hdrs = [
        "compiler/compiler.h",
        "compiler/error-reporter.h",
        "compiler/generics.h",
        "compiler/grammar.zap.h",
        "compiler/lexer.zap.h",
        "compiler/lexer.h",
        "compiler/module-loader.h",
        "compiler/node-translator.h",
        "compiler/parser.h",
        "compiler/resolver.h",
        "compiler/type-id.h",
    ],
    include_prefix = "zap",
    visibility = ["//visibility:public"],
    deps = [
        ":zap",
    ],
)

cc_binary(
    name = "zap_tool",
    srcs = [
        "compiler/zap.c++",
        "compiler/module-loader.c++",
    ],
    visibility = ["//visibility:public"],
    deps = [
        ":zapc",
        "//src/zap/compat:json",
    ],
)

cc_binary(
    name = "zapc-c++",
    srcs = [
        "compiler/zapc-c++.c++",
    ],
    defines = select({
        "//src/zap:zap_no_inline_accessors_true": ["ZAP_NO_INLINE_ACCESSORS"],
        "//conditions:default": [],
    }),
    visibility = ["//visibility:public"],
    deps = [
        ":zapc",
    ],
)

cc_binary(
    name = "zapc-zap",
    srcs = [
        "compiler/zapc-zap.c++",
    ],
    visibility = ["//visibility:public"],
    deps = [
        ":zapc",
    ],
)

# zap files that are implicitly available for import to any .zap.
filegroup(
    name = "zap_system_library",
    srcs = [
        "c++.zap",
        "schema.zap",
        "stream.zap",
        "//src/zap/compat:json.zap",
    ],
    visibility = ["//visibility:public"],
)

# library to link with every cc_zap_library
cc_library(
    name = "zap_runtime",
    visibility = ["//visibility:public"],
    # include json since it is not exposed as cc_zap_library
    deps = [
        ":zap",
        "//src/zap/compat:json",
    ],
)

filegroup(
    name = "testdata",
    srcs = glob(["testdata/**/*"]),
)

cc_zap_library(
    name = "zap_test",
    srcs = [
        "test.zap",
        "test-import.zap",
        "test-import2.zap",
    ],
    data = [
        "c++.zap",
        "schema.zap",
        "stream.zap",
        ":testdata",
    ],
    include_prefix = "zap",
    src_prefix = "src",
)

cc_library(
    name = "zap-test",
    srcs = ["test-util.c++"],
    hdrs = ["test-util.h"],
    include_prefix = "zap",
    visibility = [":__subpackages__"],
    deps = [
        ":zap-rpc",
        ":zap_test",
        ":zapc",
        "//src/kj:kj-test",
    ],
)

[cc_test(
    name = f.removesuffix(".c++"),
    srcs = [f],
    deps = [":zap-test"],
) for f in [
    "any-test.c++",
    "blob-test.c++",
    "canonicalize-test.c++",
    "common-test.c++",
    "capability-test.c++",
    "compiler/evolution-test.c++",
    "compiler/lexer-test.c++",
    "compiler/type-id-test.c++",
    "dynamic-test.c++",
    "encoding-test.c++",
    "endian-test.c++",
    "layout-test.c++",
    "membrane-test.c++",
    "message-test.c++",
    "orphan-test.c++",
    "reconnect-test.c++",
    "rpc-test.c++",
    "rpc-twoparty-test.c++",
    "schema-test.c++",
    "schema-loader-test.c++",
    "schema-parser-test.c++",
    "serialize-async-test.c++",
    "serialize-packed-test.c++",
    "serialize-test.c++",
    "serialize-text-test.c++",
    "stringify-test.c++",
]]

cc_test(
    name = "endian-reverse-test",
    srcs = ["endian-reverse-test.c++"],
    target_compatible_with = select({
        "@platforms//os:windows": ["@platforms//:incompatible"],
        "//conditions:default": [],
    }),
    deps = [":zap-test"],
)

cc_library(
    name = "endian-test-base",
    hdrs = ["endian-test.c++"],
    deps = [":zap-test"],
)

cc_test(
    name = "endian-fallback-test",
    srcs = ["endian-fallback-test.c++"],
    deps = [":endian-test-base"],
)

cc_test(
    name = "fuzz-test",
    size = "large",
    srcs = ["fuzz-test.c++"],
    tags = ["manual"],
    deps = [":zap-test"],
)
