load("@zap-cpp//src/zap:cc_zap_library.bzl", "cc_zap_library")
load("@zap-cpp//src/zap:rust_zap_library.bzl", "rust_zap_library")
load("@rules_cc//cc:cc_library.bzl", "cc_library")
load("@rules_cc//cc:cc_test.bzl", "cc_test")

exports_files([
    "json.zap",
    "std-iterator.h",
])

# because git contains generated artifacts (which are used to bootstrap the compiler)
# we can't have cc_zap_library for json.zap. Expose it as cc library and a file.
cc_library(
    name = "json",
    srcs = [
        "json.c++",
        "json.zap.c++",
    ],
    hdrs = [
        "json.zap.h",
        "json.h",
    ],
    include_prefix = "zap/compat",
    visibility = ["//visibility:public"],
    deps = [
        "//src/zap",
    ],
)

cc_library(
    name = "json-rpc",
    srcs = [
        "json-rpc.c++",
    ],
    hdrs = [
        "json-rpc.h",
    ],
    include_prefix = "zap/compat",
    visibility = ["//visibility:public"],
    deps = [
        ":json-rpc_zap",
        "//src/kj/compat:kj-http",
    ],
)

cc_zap_library(
    name = "json-rpc_zap",
    srcs = [
        "json-rpc.zap",
    ],
    include_prefix = "zap/compat",
    src_prefix = "src",
    visibility = ["//visibility:public"],
)

rust_zap_library(
    name = "json_zap_rust",
    srcs = ["json.zap"],
    crate_name = "json_zap",
    src_prefix = "src",
    target_compatible_with = select({
        "//src/zap:gen_rust_true": [],
        "//conditions:default": ["@platforms//:incompatible"],
    }),
    visibility = ["//visibility:public"],
)

cc_zap_library(
    name = "byte-stream_zap",
    srcs = ["byte-stream.zap"],
    include_prefix = "zap/compat",
    src_prefix = "src",
    visibility = ["//visibility:public"],
)

rust_zap_library(
    name = "byte-stream_zap_rust",
    srcs = ["byte-stream.zap"],
    crate_name = "byte_stream_zap",
    src_prefix = "src",
    target_compatible_with = select({
        "//src/zap:gen_rust_true": [],
        "//conditions:default": ["@platforms//:incompatible"],
    }),
    visibility = ["//visibility:public"],
)

cc_zap_library(
    name = "json-test_zap",
    srcs = [
        "json-test.zap",
    ],
    include_prefix = "zap/compat",
    src_prefix = "src",
    visibility = ["//visibility:public"],
)

cc_zap_library(
    name = "http-over-zap_zap",
    srcs = ["http-over-zap.zap"],
    include_prefix = "zap/compat",
    src_prefix = "src",
    visibility = ["//visibility:public"],
    deps = [":byte-stream_zap"],
)

cc_library(
    name = "http-over-zap",
    srcs = [
        "byte-stream.c++",
        "http-over-zap.c++",
    ],
    hdrs = [
        "byte-stream.h",
        "http-over-zap.h",
    ],
    include_prefix = "zap/compat",
    visibility = ["//visibility:public"],
    deps = [
        ":http-over-zap_zap",
        "//src/kj/compat:kj-http",
    ],
)

rust_zap_library(
    name = "http-over-zap_zap_rust",
    srcs = ["http-over-zap.zap"],
    crate_name = "http_over_zap_zap",
    src_prefix = "src",
    target_compatible_with = select({
        "//src/zap:gen_rust_true": [],
        "//conditions:default": ["@platforms//:incompatible"],
    }),
    visibility = ["//visibility:public"],
    deps = [":byte-stream_zap_rust"],
)

cc_library(
    name = "websocket-rpc",
    srcs = [
        "websocket-rpc.c++",
    ],
    hdrs = [
        "websocket-rpc.h",
    ],
    include_prefix = "zap/compat",
    visibility = ["//visibility:public"],
    deps = [
        "//src/zap",
        "//src/kj/compat:kj-http",
    ],
)

[cc_test(
    name = f.removesuffix(".c++"),
    srcs = [f],
    deps = [
        ":http-over-zap",
        ":websocket-rpc",
        "//src/zap:zap-test",
    ],
) for f in [
    "byte-stream-test.c++",
    "http-over-zap-test.c++",
    "websocket-rpc-test.c++",
]]

cc_test(
    name = "http-over-zap-bench",
    srcs = ["http-over-zap-bench.c++"],
    tags = ["google_benchmark"],
    deps = [
        ":http-over-zap",
        "//src/zap:zap-rpc",
        "@google_benchmark//:benchmark",
    ],
)

cc_test(
    name = "json-rpc-test",
    srcs = ["json-rpc-test.c++"],
    deps = [
        ":json-rpc",
        "//src/zap:zap-test",
    ],
)

cc_test(
    name = "json-test",
    srcs = ["json-test.c++"],
    deps = [
        ":json",
        ":json-test_zap",
        "//src/zap:zap-test",
    ],
)
